--- a/src/main/resources/templates/exchange/accounts.html
+++ b/src/main/resources/templates/exchange/accounts.html
@@ -5,7 +5,7 @@
         th:replace="~{layout/basic_page :: layout (title='Exchange Accounts', content=~{::#content})}"
 >
 <div id="content" class="container">
-    <h1>Accounts</h1>
+    <h1 class="display-4">Accounts</h1>
 
     <table class="table table-dark">
         <thead>
