--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -27,7 +27,14 @@
                     <a class="nav-link" th:href="@{/exchanges}">Exchanges</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/users/{id}(id=${#authentication.getPrincipal().getId()})}">My Profile</a>
+                    <a class="nav-link position-relative" th:href="@{/users/{id}(id=${#authentication.getPrincipal().getId()})}">
+                        My Profile
+                        <span
+                            th:if="${#authentication.getPrincipal().isHasNotifications()}"
+                            th:text="${#authentication.getPrincipal().getNewNotificationCount()}"
+                            class="badge rounded-pill bg-danger"
+                        ></span>
+                    </a>
                 </li>
             </ul>
             <form class="d-flex" th:action="@{/logout}" th:method="post">
