Added change password page.

--- a/src/main/resources/templates/exchange/create_account.html
+++ b/src/main/resources/templates/exchange/create_account.html
@@ -2,7 +2,7 @@
 <html
         lang="en"
         xmlns:th="http://www.thymeleaf.org"
-        th:replace="~{layout/basic_page :: layout (title='Exchange Accounts', content=~{::#content})}"
+        th:replace="~{layout/basic_page :: layout (title='Create Account', content=~{::#content})}"
 >
 <div id="content" class="container">
     <h1 class="display-4">Create Account</h1>
