--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -62,4 +62,8 @@
             </li>
         </ul>
     </div>
+
+    <div>
+        <a class="btn btn-primary" th:href="@{/users/{uId}/changePassword(uId=${userId})}">Change Password</a>
+    </div>
 </div>
